[Qt] Major performance improvement in Qt's PluginDatabase implementation https://bugs.webkit.org/show_bug.cgi?id=106140

Patch by David Faure <faure@kde.org> on 2013-01-07
Reviewed by Simon Hausmann.

No new tests, only a performance improvement.

* plugins/qt/PluginPackageQt.cpp:
(WebCore::PluginPackage::fetchInfo): Don't do a full-fledged load(), load the module directly.
(WebCore::PluginPackage::load): Use existing module if fetchInfo created it.

Canonical link: https://commits.webkit.org/124407@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138944 268f45cc-cd09-0410-ab3c-d52691b4dbfc